--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-tilt": "^1.0.2",
+    "react-parallax-tilt": "^1.7.303",
     "react-tsparticles": "^2.12.2",
     "react-use": "^17.6.0",
     "three": "^0.178.0",
