--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  "dev": "next dev",
+  "build": "next build --no-lint",
+  "start": "next start"
+}
+,
   "dependencies": {
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.11",
@@ -30,6 +30,6 @@
     "@types/react-dom": "^18.3.7",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   }
 }
